[fix]: Fix Issue Related to Grid Selection | Fix Z-Index of Grid Hover Effect
1. Fix Issue that Selected Grid Effect wont be Cleared when Select another Grid;
2. Fix Issue of Z-Index of Grid Hover Effect.

--- a/src/JSXs/Game/GamePanel/GamePanel.css
+++ b/src/JSXs/Game/GamePanel/GamePanel.css
@@ -17,7 +17,7 @@
     --z-index-piece-name: 210;
     --z-index-selected-effect: 110;
     --z-index-movable-effect: 100;
-    --z-index-hover-effect: 10;
+    --z-index-hover-effect: 10000;
 }
 
 *, *::after, *::before {
